# copied_sysy

./: Makefile  main.out
src/: CMakeLists.txt  Makefile  common.h  lexer.cpp  lexer.l  main.cpp  parser.cpp  parser.h  parser.output  parser.y  test.c  test.ir  tree.cpp  tree.h  type.cpp  type.h
